# TARVIA-AI

./: README.md  pyproject.toml
src/tarvia_ai/: anthropic_client.py  api_models.py  chunking.py  config.py  document_loader.py  gold_store.py  ingest_cli.py  local_client.py  main.py  pubmed.py  service.py  vector_store.py
tests/: test_chunking.py  test_clinical_guardrails.py  test_gold_store.py  test_vector_store.py
training/: README.md  merge_lora.py  prepare_sft_dataset.py  train_lora.py
